# writerbox

./: CHANGELOG.md  README.md  TODO.md  pyproject.toml  test_ui.py
docs/: spec-sheet.md
sample_writings/: .hidden_file.md  draft.md  empty_file.md  essay.md  long_essay.md  malformed_frontmatter.md  many_tags.md  newline_in_tags.md  no_category.md  no_frontmatter.md  only_frontmatter.md  poem.md  quote_in_title.md  recent_file.md  special-chars_!@#$%^&()_+.md  unicode_test_🎨.md  very_long_name_that_might_overflow_the_ui_display_and_test_how_it_handles_long_filenames.md
sample_writings/subdir/: nested_file.md
sample_writings/subdir/deep/nested/: deeper_file.md
src/writerbox/: __init__.py  cli.py  scanner.py  ui.py
tests/: __init__.py  test_edge_cases.py  test_scanner.py
